[build-system]
requires = ['pip>=20.3', 'setuptools>=62', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name = "biliup"
authors = [{ name = "ForgQi" }]
description = "stream download and upload"
keywords = ["bilibili douyu huya"]
urls = { Homepage = "https://github.com/ForgQi/bilibiliupload" }
requires-python = ">= 3.8"
dependencies = [
    "tomli-w>=1.0.0",
    "stream-gears >= 0.2.2,<0.3",
    "psutil >= 5.4.6",
    "aiofiles >= 24.1.0",
    "yt-dlp >= 2025.2.19",
    "Pillow >= 11.1.0",
    "aiohttp[speedups] >= 3.11.13",
    "aiohttp_cors >= 0.7.0",
    "Requests >= 2.32.3",
    "httpx[http2] >= 0.28.1",
    "httpcore >= 1.0.7",
    "PyYAML >= 6.0.2",
    "streamlink >= 7.1.3",
    "ykdl >= 1.8.0",
    "rsa >= 4.9",
    "importlib-resources; python_version < '3.9'",
    "tomli >= 2.2.1 ; python_version < '3.11'",
    "protobuf >= 6.30.0",
    "SQLAlchemy >= 2.0.38",
    "alembic >= 1.15.1",
    "m3u8 >= 6.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
selenium = ["selenium >= 3.8.1"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
biliup = "biliup.__main__:arg_parser"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.package-data]
biliup = ["common/*.ini", "web/public/**", "web/public/build/*", "database/migration/*", "Danmaku/douyin_util/webmssdk.js"]

[tool.setuptools.packages.find]
include = ["biliup*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "biliup.__version__" }
